@@ -1,5 +1,10 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* tests/test-getexp.c: Add _Decimal32 and _Decimal128 tests and remove
+	check for infinity for _Decimal64.
+
+2014-05-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* libdecnumber/bid/bid-coeffbits.h: New file: function to calculate
 	required bits to express BID coefficient.
 	* libdecnumber/bid/decimal128.c (decimal128FromNumber): Add BID
